tests/anon_aggregate_field_sep_missing_bad.stderr
tests/anon_aggregate_field_sep_missing_bad.sl:3:26: error: SL1004: unexpected token
